--- a/index.html
+++ b/index.html
@@ -5,23 +5,25 @@
  <meta charset="utf-8">
  <title></title>
  <link rel="stylesheet" href="css/style.css">
+ <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
 </head>
 
 <body>
- <section class="mainMachine">
+  <section class="top"></section>
+  <section class="mainMachine">
    <!-- this section is going to contain the three slots -->
    <!-- this section is going to contain 5 random items in the first slot -->
    <!-- each ID slots are going to need to contain 5 items -->
    <!--Separated each button to its own section in order to organize what is
      being done in CSS and JS -->
-     <img id ="reel1" src="images/destiny.jpg" alt="">
-     <img id ="reel2" src="images/destiny.jpg" alt="">
-     <img id ="reel3" src="images/destiny.jpg" alt="">
+       <img id ="reel1" src="cherry.png" alt="">
+       <img id ="reel2" src="cherry.png" alt="">
+       <img id ="reel3" src="cherry.png" alt="">
 
   <section class = "buttons">
-    <button id="stop1" value ="button1" data-id="0">Stop</button>
-    <button id="stop2" value= "button2" data-id="1">Stop</button>
-    <button id="stop3" value= "button3" data-id="2">Stop</button>
+    <button id="stop1" value ="button1" data-id="0">STOP</button>
+    <button id="stop2" value= "button2" data-id="1">STOP</button>
+    <button id="stop3" value= "button3" data-id="2">STOP</button>
   </section>
    <!-- <section id="slotOne">
        <button  id="button" type="button" name="start">Stop</button>
@@ -39,7 +41,7 @@
   <input id="betMoney" type="text" name="" value="">
   <button id="setButton">Set Amount</button>
   <button id="betButton">Bet Amount</button>
-  <h1>Purse:
+  <h1>$ PURSE $:
   <span id="purse"> </span></h1>
  </section>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
